Fixed stats, quickselect and make search case insensitive.